--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,10 @@ h1{
 }
 
 .avatar{
-    width: 200px;
+    /*width: 200px;*/
+    /*height: 250px;*/
     height: 250px;
+    transition: all .2s ease;
 }
 
 .info-text{
@@ -174,7 +176,7 @@ h1{
         display: block;
     }
     .avatar{
-        width: 190px;
+        /*width: 190px;*/
         height: 250px;
     }
     .list{
@@ -183,6 +185,20 @@ h1{
 
 }
 
+/*._touch{*/
+/*    background-color: darkred;*/
+/*    font-size: 50px;*/
+/*}*/
+/*.list{*/
+/*    font-size: 15px;*/
+/*    padding: 40px;*/
+/*}*/
+/*.avatar{*/
+/*    margin-top: 200px;*/
+/*}*/
+/*.info{*/
+/*    font-size: 30px;*/
+/*}*/
 
 
 /*@keyframes show{*/
